[package]
name = "ecos"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }